--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,12 +13,15 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "node-sass": "^7.0.1",
-    "typescript": "^4.8.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6"
+    "@types/react-dom": "^18.0.6",
+    "node-sass": "^7.0.1",
+    "typescript": "^4.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
